  the download prompt even if `downloads.location.remember` is set.

Fixed
~~~~~

- Race condition causing a colored statusbar in normal mode when
  entering/exiting caret mode quickly.
- Using `100%` for a hue in a `hsv(...)` config value now corresponds to 359
  (rather than 255), matching the fixed behavior in Qt 5.13.

v1.6.2 (unreleased)
-------------------

Fixed
~~~~~

- Crash when SQL errors occur while using the completion.

v1.6.1
------

Changed
~~~~~~~

- Windows/macOS releases now ship with Qt 5.12.2, which includes
  security fixes up to Chromium 72.0.3626.121 (including CVE-2019-5786
  which is known to be exploited in the wild).

Fixed
~~~~~

- Crash when using `:config-{dict,list}-{add,remove}` with an invalid setting.
- Functionality like hinting on pages with an element with ID `_qutebrowser` (such as qutebrowser.org) on Qt 5.12.
- The .desktop file in v1.6.0 was missing the "Actions" key, which is now fixed.
- The SVG icon now has a size of 256x256px set to comply with freedesktop standards.
- Setting `colors.statusbar.*.bg` to a gradient now has the expected effect of
  the gradient spanning the entire statusbar.

v1.6.0
------

Added
~~~~~

- New settings:
  * `tabs.new_position.stacking` which controls whether new tabs opened from a
    page should stack on each other or not.
  * `completion.open_categories` which allows to configure which categories are
    shown in the `:open` completion, and how they are ordered.
  * `tabs.pinned.frozen` to allow/deny navigating in pinned tabs.
  * `hints.selectors` which allows to configure what CSS selectors are used for
    hints, and also allows adding custom hint groups.
  * `input.insert_mode.leave_on_load` to turn off leaving insert mode when a
    new page is loaded.
- New config manipulation commands:
  * `:config-dict-add` and `:config-list-add` to a new element to a dict/list
    setting.
  * `:config-dict-remove` and `:config-list-remove` to remove an element from a
    dict/list setting.