@@ -46,6 +46,8 @@ Fixed
   entering/exiting caret mode quickly.
 - Using `100%` for a hue in a `hsv(...)` config value now corresponds to 359
   (rather than 255), matching the fixed behavior in Qt 5.13.
+- Chaining commands with ;; used to abort with some failing commands. It now
+  runs the second command no matter whether the first one succeeded or not.
 
 v1.6.2 (unreleased)
 -------------------
